Details
-
Bug
-
Resolution: Fixed
-
P1: Critical
-
6.9.0 RC
-
-
749268080 (dev), 0113d16bc (6.9), ee921b6b8 (6.9.0)
Description
Compilation of qmake projects which use QStateMachine or QScxmlStateMachine fails with "QtScxmlGlobal/qtscxmlglobal-config.h" file not found error.
"scxmlglobal_private" needs to be added to the "QT" qmake variable for the project to successfully compile.
To reproduce the issue, build Qt SCXML Sudoku and the Qt Ping Pong States example qmake projects.
Attachments
Issue Links
- resulted from
-
QTBUG-132565 Questions about feature statemachine
-
- Closed
-