CMake: Make ScxmlGlobalPrivate actually private

It's headers should not leak into the Scxml and StateMachine public
headers.

Amends commit d59b74c12cbd76f129db5b12246749206bcd3b29

Fixes: QTBUG-134901
Change-Id: Ib176d1611be0a2d803e4b69b0ee3848cdae6f0e6
Reviewed-by: Alexandru Croitor <alexandru.croitor@qt.io>
Reviewed-by: Lars Schmertmann <SmallLars@t-online.de>
(cherry picked from commit 749268080fb9764a20c2a3f2b6dfea0de0091cd9)
Reviewed-by: Qt Cherry-pick Bot <cherrypick_bot@qt-project.org>
(cherry picked from commit 0113d16bc58a03a766182761b9d09a4c4e49aed9)