src/statemachine/qstatemachineglobal_p.h
@@ -1,8 +1,8 @@
-// Copyright (C) 2016 The Qt Company Ltd.
+// Copyright (C) 2025 The Qt Company Ltd.
 // SPDX-License-Identifier: LicenseRef-Qt-Commercial OR LGPL-3.0-only OR GPL-2.0-only OR GPL-3.0-only
 
-#ifndef QSCXMLGLOBALS_P_H
-#define QSCXMLGLOBALS_P_H
+#ifndef QSTATEMACHINEGLOBAL_P_H
+#define QSTATEMACHINEGLOBAL_P_H
 
 //
 //  W A R N I N G
@@ -15,16 +15,7 @@
 // We mean it.
 //
 
-#include "qscxmlglobals.h"
-#include <QtCore/qloggingcategory.h>
-
+#include "qstatemachineglobal.h"
 #include <private/qtscxmlglobal-config_p.h>
 
-QT_BEGIN_NAMESPACE
-
-Q_DECLARE_LOGGING_CATEGORY(qscxmlLog)
-Q_DECLARE_LOGGING_CATEGORY(scxmlLog)
-
-QT_END_NAMESPACE
-
-#endif // QSCXMLGLOBALS_P_H
+#endif // QSTATEMACHINEGLOBAL_P_H
